--- a/indexaboutme.html
+++ b/indexaboutme.html
@@ -10,28 +10,30 @@
 <body>
     <h1 class="expAbout">About me and experience</h1>
     <img class="profileP" src="./orlandoPS.png" alt="profile picture">
-    <section>
-        <button><h2><a href="./index.html">Orlando Perez santos</a></h2></button>
-        <p class="pcolor">Just started to learn coding in the We Can Code It bootcamp</p>
-    </section>
 
     <section>
-        <button><h2><a href="./index.html">Return</a></h2></button>
-    </section>
+        <a href="./index.html">Orlando Perez Santos</a>
+        <p class="pcolor">Just started to learn coding in the We Can Code It bootcamp</p>
+    </section><br>
+
+    <div id="aboutme">
+        <a href="./index.html">Return</a>
+    </div><br>
 
     
-    <section>
-        <button><h2><a href="./indexcontact.html">Contact me</a></h2></button>
-    </section>
+    <div>
+        <a href="./indexcontact.html">Contact me</a>
+    </div><br>
+    
 
     <div>
-        <button><h2><a href="./index.html">Home</a></h2></button>
-    </div>
+        <button><a href="./index.html">Home</a></button>
+    </div><br>
 
     <h3>
         <div class="containerr">
             <ul class="container">
-                <li>Amazon assosiate
+                <li>Amazon Assosiate
                     <p>joined Amazon back in may 2019, has learned most of the different path in different departments, currently working as a inbound stower and Amnesty Robotics</p>
                 </li>
 
