--- a/indexcontact.html
+++ b/indexcontact.html
@@ -14,20 +14,21 @@
 <img class="profileP" src="./orlandoPS.png" alt="profile picture">
 <div>
     <ul>
-        <li>raisaiber1@gmail.com</li><br>
+        <li>Raisaiber1@gmail.com</li><br>
         <li><a href="https://www.youtube.com/channel/UCSNxpHNREnGp1ToY1I-Opfg" target="_blank">Youtube</a></li><br>
         <li><a href="https://www.instagram.com/orlando2y/" target="_blank">Instagram</a></li><br>
         <li><a href="https://www.linkedin.com/in/orlando-perez-santos-874250272/" target="_blank">Linkedin</a></li>
 
+        
     </ul>
 
 </div>
-<section>
-    <button><h2><a href="./indexaboutme.html">About me</a></h2></button>
-</section>
+<div>
+    <a href="./indexaboutme.html">About me</a>
+</div><br>
 
 <div>
-    <button><h2><a href="./index.html">Home</a></h2></button>
+    <button><a href="./index.html">Home</a></button>
 </div>
 
 </body>
