--- a/index.html
+++ b/index.html
@@ -10,26 +10,30 @@
 <body>
     <div class="prueba">
     <div class="background-img"></div>
-    <h1 class="welcome">Welcome to my personal portfolio</h1>
+    <h1 class="welcome">Welcome to my personal portfolio</h1><br>
+
+
+
     <section class="grid1">
-        <button><h2><a href="./indexaboutme.html">About me</a></h2></button>
+        <a href="./indexaboutme.html">About me</a>
     </section>
 
     <section class="grid1">
-    <button><h2><a href="./indexcontact.html">Contact me</a></h2></button>
+    <a href="./indexcontact.html">Contact me</a>
     </section></button>
 </div>
     <img class="profileP" src="./orlandoPS.png" alt="profile picture">
     <section>
-        <button><h2><a href="./index.html">Orlando Perez santos</a></h2></button>
+        <a class="orlandoPS" href="./index.html">Orlando Perez santos</a><br>
         <p class="pcolor">Welcome to my professional portfolio website as I pursue my goal of becoming a Fullstack developer. This platform showcases my skills, projects, and dedication to continuous learning. I invite you to explore my work and witness my passion for creating impactful solutions. Thank you for visiting, and I look forward to sharing my journey with you.</p>
     </section>
     
     <div>
         <button><h2><a href="./index.html">Home</a></h2></button>
     </div>
+    
 
-<footer>thanks for visiting</footer>
+<footer>thanks for visiting.</footer>
 
 
 </body>
