--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     
 
-<footer>thanks for visiting.</footer>
+<footer>Thank you for visiting my portfolio,this is just the beginning.</footer>
 
 
 </body>
