added a github link also added a project section

--- a/indexaboutme.html
+++ b/indexaboutme.html
@@ -10,26 +10,27 @@
 <body>
     <h1 class="expAbout">About me and experience</h1>
     <img class="profileP" src="./orlandoPS.png" alt="profile picture">
-
     <section>
-        <a href="./index.html">Orlando Perez Santos</a>
+        <a href="./portfolioMain.html">Orlando Perez Santos</a>
         <p class="pcolor">Just started to learn coding in the We Can Code It bootcamp</p>
     </section><br>
-
     <div id="aboutme">
-        <a href="./index.html">Return</a>
-    </div><br>
-
-    
+        <a href="./portfolioMain.html">Return</a>
+    </div><br> 
     <div>
         <a href="./indexcontact.html">Contact me</a>
-    </div><br>
-    
-
+    </div><br>   
     <div>
-        <button><a href="./index.html">Home</a></button>
+        <button><a href="./portfolioMain.html">Home</a></button>
     </div><br>
-
+    <h2 class="projects">My projects</h2>
+    <div>
+        <p class="projects2">My current projects are  this portfolio and a game called donuts clicker</p>
+        <img class="profileP" src="./donutClicker.png" alt="donutClicker">
+        <p class="project3">This Donut Game is inspired by a game called Cookie Clicker. im using this project to develop my javascript skill while learning in We Can Code It bootcamp.</p>
+        <p class="project3"> I will be adding Updates to this portfolio while i learn and makes new projects Thank you for visiting my page.</p>
+    </div>
+    <h2 class="experience3">The following are my coding and labor experience</h2>
     <h3>
         <div class="containerr">
             <ul class="container">
@@ -52,21 +53,9 @@
                 <li>Flexbox
                     <p>first time using Flexbox</p>
                 </li>
-
-
-
-
             </ul>
-
-
-
-
-        </div>
-
-
-
+        </div>     
     </h3>
-
 
 </body>
 </html>
