--- a/indexcontact.html
+++ b/indexcontact.html
@@ -17,19 +17,15 @@
         <li>Raisaiber1@gmail.com</li><br>
         <li><a href="https://www.youtube.com/channel/UCSNxpHNREnGp1ToY1I-Opfg" target="_blank">Youtube</a></li><br>
         <li><a href="https://www.instagram.com/orlando2y/" target="_blank">Instagram</a></li><br>
-        <li><a href="https://www.linkedin.com/in/orlando-perez-santos-874250272/" target="_blank">Linkedin</a></li>
-
-        
+        <li><a href="https://www.linkedin.com/in/orlando-perez-santos-874250272/" target="_blank">Linkedin</a></li><br>
+        <li><a href="https://github.com/santoorl" target="_blank">Github</a></li>       
     </ul>
-
 </div>
 <div>
     <a href="./indexaboutme.html">About me</a>
 </div><br>
-
 <div>
-    <button><a href="./index.html">Home</a></button>
+    <button><a href="./portfolioMain.html">Home</a></button>
 </div>
-
 </body>
 </html>
