--- a/portfolioMain.html
+++ b/portfolioMain.html
@@ -11,30 +11,21 @@
     <div class="prueba">
     <div class="background-img"></div>
     <h1 class="welcome">Welcome to my personal portfolio</h1><br>
-
-
-
     <section class="grid1">
         <a href="./indexaboutme.html">About me</a>
     </section>
-
     <section class="grid1">
     <a href="./indexcontact.html">Contact me</a>
     </section></button>
 </div>
     <img class="profileP" src="./orlandoPS.png" alt="profile picture">
     <section>
-        <a class="orlandoPS" href="./index.html">Orlando Perez santos</a><br>
+        <a class="orlandoPS" href="./portfolioMain.html">Orlando Perez santos</a><br>
         <p class="pcolor">Welcome to my professional portfolio website as I pursue my goal of becoming a Fullstack developer. This platform showcases my skills, projects, and dedication to continuous learning. I invite you to explore my work and witness my passion for creating impactful solutions. Thank you for visiting, and I look forward to sharing my journey with you.</p>
-    </section>
-    
+    </section>   
     <div>
-        <button><h2><a href="./index.html">Home</a></h2></button>
+        <button><h2><a href="./portfolioMain.html">Home</a></h2></button>
     </div>
-    
-
 <footer>Thank you for visiting my portfolio,this is just the beginning.</footer>
-
-
 </body>
 </html>
